--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "blog app",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha ./test"
   },
   "author": "Chris Jarvis",
   "license": "ISC",
@@ -13,5 +14,10 @@
     "express": "^4.16.2",
     "morgan": "^1.9.0",
     "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "mocha": "^4.0.1"
   }
 }
